--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,25 +1,28 @@
 name: CI
-on:
-push:
-branches: [ "main" ] 
-pull_request:
-branches: [ "main" ]
 
+on:
+#
+push:
+  branches: [ "main" ] 
+pull_request:
+  branches: [ "main" ]
+
+#
 jobs:
+#
 my_build_job:
 runs-on: ubuntu-latest
 steps:
-- uses : actions/checkout@v3
+- uses: actions/checkout@v3
 #
 - name : npm install,test and build
 run : |
  npm install
  npm run build
-
-#
+# Пример
  - name: Run a one-line script
- run: echo Hello,world!
- #
+   run: echo Hello,world!
+# 
  - name: Run a milti-line script
  run: |
  echo Add other actions to build,
